brat/test/golden/error/compjuxt_syn_chk.brat
ext "" addn :: Nat, Nat -> Nat

id2 :: Nat, Nat -> Nat, Nat
id2 = x,y => x,y

-- This wont work because `1, 2` isn't `Syn`
num_lit :: { Nat, Nat }
num_lit = { (1, 2); id2() }

-- This wont work because `1` isn't `Syn`
f :: { Nat -> Nat }
f = { x => (1, x); addn() }
